Fix spacing of REsult Item data

--- a/src/common/SearchResultItem/SearchResultItem.module.scss
+++ b/src/common/SearchResultItem/SearchResultItem.module.scss
@@ -13,11 +13,20 @@
   object-fit: cover;
 }
 
+.resultData {
+  display: grid;
+  grid-template-rows: 2fr 1fr;
+}
+
 .resultTitle {
   margin-bottom: 0.2rem;
-  font-size: inherit;
+  font-size: 1.2rem;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .resultType {
-  font-size: 1.2rem;
+  font-size: 1rem;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
